  Features:
    - [space-age] Made it possible to craft mk6+ items in Elctromagnetic Plant.
    - ACU recipe [space-age] Edition.
  Changes:
    - [space-age] Elctromagnetic Mech crafting. Can use Elctromagnetic Plant to craft sarcophagus.
    - [space-age] Recipes have been made for: Battery, Fission, Laser, Roboport, Shield, Solar, Exolegs.
    - Achivement text make more sense.
  Modding:
    - Re Migrate bobs items that has been migrated in 1.3.0 already.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.
    - Improved tips description on some mods.
  Modding:
    - Fixed missing item in roboport recipe (boblogiostics).
    - Added item to armour recipes (bobplate, bobenemies).
    - bob- Prefix Crashing with beta (11.03.25).
  Bugfixes:
    - Crashes with bobs in general. (11.03.25).
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 04.03.2025
  Features:
    - Repeatable migrations.
    - Added all the old chat popups to tips & tricks. some teext changes may happen as the mods updates.  
  Changes:
    - Achivement name change [Surviving planet destruction] --> [Leviathan]
    - Control stage code are deleted, no longer in use/needed.
    - Deleted setting(s) regarding the old chat popup.
    - Bobs & [space-age] bridge is moved to Alt Chemical Processing. 
    - If you are currently playing Bobs and PA&R please use that mod to restore the merge of items in recipes.
    - Items in the bridge are as followes: ["bob-carbon"] = "carbon". ["bob-tungsten-plate"] = "tungsten-plate". ["bob-tungsten-carbide"] = "tungsten-carbide". ["bob-lithium"] = "lithium-plate". ["seedling"] = "tree-seed". ["bob-salt"] = "salt", from "SaltedFish" if mods["SaltedFish"].