@@ -12,6 +12,7 @@
 	require("mods.recipes.updates.compatible_updates")
 
 --compatible.tech
+	require("mods.technology.updates.base-tech-changes")
 	require("mods.technology.updates.par-depedency-updates")
 	require("mods.technology.updates.spaceage-science-updates")
 	require("mods.technology.updates.bobs-science-updates")
