@@ -10,6 +10,7 @@ Date: 00.03.2025
     - [space-age] Elctromagnetic Mech crafting. Can use Elctromagnetic Plant to craft sarcophagus.
     - [space-age] Recipes have been made for: Battery, Fission, Laser, Roboport, Shield, Solar, Exolegs.
     - Achivement text make more sense.
+    - Start of base game towards PAR will now have crafting triggers over science research.
   Modding:
     - Re Migrate bobs items that has been migrated in 1.3.0 already.
 ---------------------------------------------------------------------------------------------------
